feat: add customer and restaurant management features with CRUD operations, security configuration, and Thymeleaf templates